--- a/design-patterns/pom.xml
+++ b/design-patterns/pom.xml
@@ -13,6 +13,12 @@
       <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.18</version>
+    </dependency>
   </dependencies>
   <artifactId>design-patterns</artifactId>
 
