--- a/design-patterns/pom.xml
+++ b/design-patterns/pom.xml
@@ -25,6 +25,12 @@
       <artifactId>cglib</artifactId>
       <version>3.3.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+      <version>1.9.4</version>
+    </dependency>
   </dependencies>
   <artifactId>design-patterns</artifactId>
 
